[package]
name = "twitch-scrapurr"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
chrono = "0.4.38"
clap = { version = "4.5.19", features = ["derive"] }
config = "0.14.0"
directories = "5.0.1"
serde = { version = "1.0.210", features = ["derive"] }
tokio = { version = "1.40.0", features = ["full"] }
toml = "0.8.19"
url = "2.5.2"
vcsr = "0.4.0"
walkdir = "2.5.0"

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "z"
panic = "abort"
